# AgentFarm-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  BUG_FIXES.md  CHANGES.md  DEMO_FILES_CREATED.md  DEMO_FINAL_SUMMARY.md  DEMO_INDEX.md  DEMO_QUICKSTART.md  DEMO_README.md  DEMO_SCREENSHOTS.md  DEMO_TESTING.md  DEMO_TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MODERNIZATION_CHECKLIST.md  MODERNIZATION_SUMMARY.md  Makefile  PR_COMMENT_RESOLUTIONS.md  QUICKSTART_IMPROVEMENTS.md  README.md  REFACTORING_COMPLETE.md  STAFF_ENGINEER_IMPLEMENTATIONS.md  STAKEHOLDER_REVIEW.md  STREAMLIT_DEMO_README.md  STREAMLIT_DEMO_SUMMARY.md  analyze_resource_efficiency.py  demo_all_tools.py  design.md  docker-compose.yml  final_mcp_demo.ipynb  mcp_data_analysis_demo.ipynb  mcp_demo.ipynb  mcp_tools_demo.ipynb  pyproject.toml  real_mcp_data_demo.ipynb  requirements-streamlit.txt  requirements.txt  run_demo.sh  (+6 more)
agentfarm_mcp/: README.md  __init__.py  __main__.py  cli.py  config.example.dev.yaml  config.example.prod.yaml  config.example.staging.yaml  config.py  server.py
agentfarm_mcp/models/: agent_models.py  base.py  comparison_models.py  database_models.py  interaction_models.py  resource_models.py  simulation_models.py
agentfarm_mcp/services/: cache_service.py  database_service.py  database_url_builder.py  redis_cache_service.py
agentfarm_mcp/tools/: advanced_tools.py  analysis_tools.py  base.py  comparison_tools.py  health_tools.py
agentfarm_mcp/utils/: circuit_breaker.py  exceptions.py  logging.py  structured_logging.py
app/: __init__.py  logging_utils.py  streamlit_app.py  ui_helpers.py
docs/: API_REFERENCE.md  CODE_REVIEW.md  FUTURE_ROADMAP.md  QUICK_START.md  STATUS.md  TOOL_CATALOG.md  TROUBLESHOOTING.md  USER_GUIDE.md  example_usage.md  guide.md  plan.md  requirements.md  summary.md
mcp/: .pylintrc  API_REFERENCE.md  CODE_REVIEW.md  COMPLETE_PROJECT_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION.md  FUTURE_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REQUIREMENTS_CHECKLIST.md  REQUIREMENTS_VERIFICATION.md  STATUS.md  TESTING_REPORT.md  TOOL_CATALOG.md  TROUBLESHOOTING.md  USER_GUIDE.md  config.example.yaml  config.py  demo_all_tools.py  pyproject.toml  requirements.txt  setup.py  test_advanced_tools.py  test_analysis_tools.py  test_comparison_tools.py  test_query_tools.py  test_server.py  verify_queries.py
mcp/mcp_server/: __init__.py  __main__.py  cli.py  config.py  server.py
mcp/services/: cache_service.py
mcp/tests/: conftest.py  test_config.py  test_exceptions.py  test_logging.py  test_query_tools.py  test_responses.py  test_server.py
mcp/tools/: analysis_tools.py  metadata_tools.py  query_tools.py
mcp/utils/: exceptions.py
scripts/: benchmark_cache.py  init_db.sql
tests/: conftest.py  test_advanced_tools.py  test_analysis_tools.py  test_comparison_tools.py  test_concurrency.py  test_config.py  test_exceptions.py  test_logging.py  test_performance.py  test_query_tools.py  test_responses.py  test_server.py  test_streamlit_demo.py
tests/integration/: test_end_to_end.py
tests/services/: test_cache_service.py  test_database_service.py  test_database_url_builder.py
tests/tools/: test_advanced_tools.py  test_analysis_tools.py  test_base.py  (+4 more)
unit/: test_logging_utils.py  test_ui_helpers.py
(+20 files in other folders)
