[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-simulation-server"
version = "0.1.0"
description = "FastMCP server for simulation database analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AgentFarm Team", email = "team@agentfarm.dev"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "deepdiff>=6.0.0",
    "psutil>=5.9.0",
    "structlog>=23.1.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
mcp-server = "agentfarm_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfarm_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agentfarm_mcp --cov-report=html --cov-report=term"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "performance: marks tests as performance benchmarks",
    "slow: marks tests as slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]